<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_3"
        app:layout_constraintBottom_toTopOf="@id/buttonRemove"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button6" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_2"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_1"
        app:layout_constraintBottom_toTopOf="@id/button_clear"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_4"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_5"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_6"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_7"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_8"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_9"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button0"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/buttonRemove"
        app:layout_constraintStart_toEndOf="@id/button_clear"
        app:layout_constraintTop_toBottomOf="@id/button2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRemove"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/arithmatic_funcion_button"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_clear"
        style="@style/Base.Widget.AppCompat.Button.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/arithmatic_funcion_button"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1" />

</androidx.constraintlayout.widget.ConstraintLayout>