<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.HomeFragment">

    <FrameLayout
        android:id="@+id/ad_top_banner_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toTopOf="@id/adRewardViewContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ad_top_banner_view_container">


        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="더모아 적립률"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/resultTextView"
            app:layout_constraintEnd_toStartOf="@id/resultTextView"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/resultTextView" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0%"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/twiceResultTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1."
            app:layout_constraintStart_toEndOf="@id/resultText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="16.65%" />

        <TextView
            android:id="@+id/twiceResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="더모아 2배 적립률"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/twiceResultTextView"
            app:layout_constraintEnd_toStartOf="@id/twiceResultTextView"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/twiceResultTextView" />

        <TextView
            android:id="@+id/twiceResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="0.0%"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/numberTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1."
            app:layout_constraintStart_toEndOf="@id/twiceResultText"
            app:layout_constraintTop_toBottomOf="@id/resultTextView"
            tools:text="33.3%" />

        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="0"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/twiceResultTextView"
            tools:text="5,999" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/adRewardViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_border"
        app:layout_constraintBottom_toTopOf="@id/numberButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textContainer">

        <WebView
            android:id="@+id/coupangPartnersWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>


    <include
        android:id="@+id/numberButtons"
        layout="@layout/layout_number_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
        app:layout_constraintDimensionRatio="5:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adRewardViewContainer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberButtons">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/launchSPay"
            style="@style/Base.Widget.AppCompat.Button.Launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@string/spay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/launchKbpay"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/launchKbpay"
            style="@style/Base.Widget.AppCompat.Button.Launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@string/kbpay"
            app:layout_constraintBottom_toBottomOf="@id/launchSPay"
            app:layout_constraintEnd_toStartOf="@id/naverPayButton"
            app:layout_constraintStart_toEndOf="@id/launchSPay"
            app:layout_constraintTop_toTopOf="@id/launchSPay" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/naverPayButton"
            style="@style/Base.Widget.AppCompat.Button.LaunchNaver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@string/launch_naver_samsungpay"
            app:layout_constraintBottom_toBottomOf="@id/launchSPay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/launchKbpay"
            app:layout_constraintTop_toTopOf="@id/launchSPay" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>